<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink"
    android:padding="10dp"
    android:layout_gravity="center"
    android:theme="@style/Theme.Material3.DynamicColors.Light.NoActionBar"
    tools:context=".Login">
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:elevation="100dp"
        android:backgroundTint="#7AFFFFFF"
        android:layout_centerInParent="true"
        android:layout_marginBottom="70dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/login"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/blue"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/artifika"
                android:hint="@string/enter_phone_number"
                android:textColor="@color/black"
                android:textSize="18sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artifika"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/artifika"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue"
                android:hint="@string/Password"
                android:textColor="@color/black"
                android:textSize="18sp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/artifika"
                android:maxLines="@integer/material_motion_duration_medium_1"
                android:textColor="@color/black"
                android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Not Registered Yet? Click Here"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:layout_marginTop="25dp"
                android:textSize="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_in"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:insetLeft="60dp"
                android:insetRight="60dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:fontFamily="@font/artifika"
                android:textSize="23sp"
                android:textStyle="bold"
                android:backgroundTint="#58F303"/>

        </LinearLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

</RelativeLayout>